replay as instances
find api controllers config  -name \*object\* | while read a; do git mv ${a} ${a/objectstorage/instance}; done
git grep -l -i objectstorage | while read a; do sed -i -e s/ObjectStorage/Instance/g -e s/objectstorage/instance/g $a; done

--- a/config/crd/patches/webhook_in_instance.yaml
+++ b/config/crd/patches/webhook_in_instance.yaml
@@ -4,7 +4,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     certmanager.k8s.io/inject-ca-from: $(NAMESPACE)/$(CERTIFICATENAME)
-  name: objectstorages.linode.stack.crossplane.io
+  name: instances.linode.stack.crossplane.io
 spec:
   conversion:
     strategy: Webhook
@@ -15,4 +15,4 @@ spec:
       service:
         namespace: $(NAMESPACE)
         name: webhook-service
-        path: /convert-objectstorage
+        path: /convert-instance
