--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -2,12 +2,12 @@
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 resources:
-- bases/linode.stack.crossplane.io_objectstorages.yaml
+- bases/linode.stack.crossplane.io_instances.yaml
 # +kubebuilder:scaffold:kustomizeresource
 
 patches:
 # patches here are for enabling the conversion webhook for each CRD
-#- patches/webhook_in_objectstorages.yaml
+#- patches/webhook_in_instances.yaml
 # +kubebuilder:scaffold:kustomizepatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
