--- a/config/samples/linode_v1alpha1_instance.yaml
+++ b/config/samples/linode_v1alpha1_instance.yaml
@@ -1,7 +1,7 @@
 apiVersion: linode.stack.crossplane.io/v1alpha1
-kind: ObjectStorage
+kind: Instance
 metadata:
-  name: objectstorage-sample
+  name: instance-sample
 spec:
   # Add fields here
   foo: bar
