--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -3,11 +3,13 @@
 # It should be run by config/default
 resources:
 - bases/linode.stack.crossplane.io_instances.yaml
+- bases/linode.stack.crossplane.io_providers.yaml
 # +kubebuilder:scaffold:kustomizeresource
 
 patches:
 # patches here are for enabling the conversion webhook for each CRD
 #- patches/webhook_in_instances.yaml
+#- patches/webhook_in_providers.yaml
 # +kubebuilder:scaffold:kustomizepatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
