--- a/config/crd/bases/linode.stack.crossplane.io_instances.yaml
+++ b/config/crd/bases/linode.stack.crossplane.io_instances.yaml
@@ -11,6 +11,8 @@ spec:
     kind: Instance
     plural: instances
   scope: ""
+  subresources:
+    status: {}
   validation:
     openAPIV3Schema:
       description: Instance is the Schema for the instances API
