add Instance status field

--- a/config/crd/bases/linode.stack.crossplane.io_instances.yaml
+++ b/config/crd/bases/linode.stack.crossplane.io_instances.yaml
@@ -223,9 +223,12 @@ spec:
               type: integer
             label:
               type: string
+            status:
+              type: string
           required:
           - id
           - label
+          - status
           type: object
       type: object
   version: v1alpha1
