--- a/config/crd/bases/linode.stack.crossplane.io_instances.yaml
+++ b/config/crd/bases/linode.stack.crossplane.io_instances.yaml
@@ -6,6 +6,30 @@ metadata:
   creationTimestamp: null
   name: instances.linode.stack.crossplane.io
 spec:
+  additionalPrinterColumns:
+  - JSONPath: .metadata.creationTimestamp
+    name: AGE
+    type: date
+  - JSONPath: .status.label
+    description: Unique label associated with this Linode Instance
+    name: LABEL
+    priority: 1
+    type: string
+  - JSONPath: .status.region
+    description: Region where this Linode Instance is deployed
+    name: REGION
+    priority: 1
+    type: string
+  - JSONPath: .status.ipv4[0]
+    description: First IPv4 address of this Linode Instance
+    name: IPV4
+    priority: 1
+    type: string
+  - JSONPath: .status.status
+    description: Power status of this Linode Instance
+    name: STATUS
+    priority: 1
+    type: string
   group: linode.stack.crossplane.io
   names:
     kind: Instance
@@ -32,6 +56,12 @@ spec:
         spec:
           description: InstanceSpec defines the desired state of Instance
           properties:
+            authorizedUsers:
+              description: AuthorizedUsers are Linode user accounts whose SSH keys
+                will be authorized to SSH into the instance
+              items:
+                type: string
+              type: array
             claimRef:
               description: ClaimReference specifies the resource claim to which this
                 managed resource will be bound. ClaimReference is set automatically
@@ -110,7 +140,12 @@ spec:
                   description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                   type: string
               type: object
+            image:
+              description: Image is the disk image to be applied to the first instance
+                disk
+              type: string
             label:
+              description: Label is the unique name of this Linode Instance
               type: string
             providerRef:
               description: ProviderReference specifies the provider that will be used
@@ -157,6 +192,19 @@ spec:
                 uses of the ReclaimPolicy concept within the Kubernetes ecosystem
                 per https://github.com/crossplaneio/crossplane-runtime/issues/21
               type: string
+            region:
+              description: Region defines the geographic location of a Linode Instance
+              type: string
+            status:
+              description: Status is the current activity status of a Linode Instance
+              enum:
+              - offline
+              - running
+              type: string
+            type:
+              description: Type is the Linode Instance Type which represents the cost,
+                processor, memory, transfer, and storage profile of the Instance
+              type: string
             writeConnectionSecretToRef:
               description: WriteConnectionSecretToReference specifies the name of
                 a Secret, in the same namespace as this managed resource, to which
@@ -171,6 +219,8 @@ spec:
               type: object
           required:
           - providerRef
+          - region
+          - type
           type: object
         status:
           description: InstanceStatus defines the observed state of Instance
@@ -220,15 +270,39 @@ spec:
                 type: object
               type: array
             id:
+              description: Id is the unique immutable numeric identifier of a Linode
+                Instance
               type: integer
+            image:
+              description: Image is the image detected on a Linode Instance disk
+              type: string
+            ipv4:
+              description: IPv4 is the list of IPv4 addresses associated with a Linode
+                Instance
+              items:
+                type: string
+              type: array
+            ipv6:
+              description: IPv6 is the public IPv6 address of a Linode Instance
+              type: string
             label:
+              description: Label is the unique mutable name of a Linode Instance
+              type: string
+            region:
+              description: Region defines the geographic location of a Linode Instance
               type: string
             status:
+              description: Status is the current activity status of a Linode Instance
+              type: string
+            type:
+              description: Type is the Linode Instance Type which represents the cost,
+                processor, memory, transfer, and storage profile of the Instance
               type: string
           required:
-          - id
           - label
+          - region
           - status
+          - type
           type: object
       type: object
   version: v1alpha1
