--- a/config/crd/bases/linode.stack.crossplane.io_instances.yaml
+++ b/config/crd/bases/linode.stack.crossplane.io_instances.yaml
@@ -3,6 +3,8 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
+  annotations:
+    controller-gen.kubebuilder.io/version: v0.2.4
   creationTimestamp: null
   name: instances.linode.stack.crossplane.io
 spec:
@@ -33,8 +35,10 @@ spec:
   group: linode.stack.crossplane.io
   names:
     kind: Instance
+    listKind: InstanceList
     plural: instances
-  scope: ""
+    singular: instance
+  scope: Namespaced
   subresources:
     status: {}
   validation:
@@ -44,24 +48,18 @@ spec:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
             of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
           type: string
         kind:
           description: 'Kind is a string value representing the REST resource this
             object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
           type: string
         metadata:
           type: object
         spec:
           description: InstanceSpec defines the desired state of Instance
           properties:
-            authorizedUsers:
-              description: AuthorizedUsers are Linode user accounts whose SSH keys
-                will be authorized to SSH into the instance
-              items:
-                type: string
-              type: array
             claimRef:
               description: ClaimReference specifies the resource claim to which this
                 managed resource will be bound. ClaimReference is set automatically
@@ -85,7 +83,7 @@ spec:
                     in the future.'
                   type: string
                 kind:
-                  description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
+                  description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
                   type: string
                 name:
                   description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
@@ -95,17 +93,16 @@ spec:
                   type: string
                 resourceVersion:
                   description: 'Specific resourceVersion to which this reference is
-                    made, if any. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#concurrency-control-and-consistency'
+                    made, if any. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency'
                   type: string
                 uid:
                   description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                   type: string
               type: object
             classRef:
-              description: NonPortableClassReference specifies the non-portable resource
-                class that was used to dynamically provision this managed resource,
-                if any. Crossplane does not currently support setting this field manually,
-                per https://github.com/crossplaneio/crossplane-runtime/issues/20
+              description: ClassReference specifies the resource class that was used
+                to dynamically provision this managed resource, if any. Crossplane
+                does not currently support setting this field manually, per https://github.com/crossplaneio/crossplane-runtime/issues/20
               properties:
                 apiVersion:
                   description: API version of the referent.
@@ -124,7 +121,7 @@ spec:
                     in the future.'
                   type: string
                 kind:
-                  description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
+                  description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
                   type: string
                 name:
                   description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
@@ -134,19 +131,46 @@ spec:
                   type: string
                 resourceVersion:
                   description: 'Specific resourceVersion to which this reference is
-                    made, if any. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#concurrency-control-and-consistency'
+                    made, if any. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency'
                   type: string
                 uid:
                   description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                   type: string
               type: object
-            image:
-              description: Image is the disk image to be applied to the first instance
-                disk
-              type: string
-            label:
-              description: Label is the unique name of this Linode Instance
-              type: string
+            forProvider:
+              properties:
+                authorizedUsers:
+                  description: AuthorizedUsers are Linode user accounts whose SSH
+                    keys will be authorized to SSH into the instance
+                  items:
+                    type: string
+                  type: array
+                image:
+                  description: Image is the disk image to be applied to the first
+                    instance disk
+                  type: string
+                label:
+                  description: Label is the unique name of this Linode Instance
+                  type: string
+                region:
+                  description: Region defines the geographic location of a Linode
+                    Instance
+                  type: string
+                status:
+                  description: Status is the current activity status of a Linode Instance
+                  enum:
+                  - offline
+                  - running
+                  type: string
+                type:
+                  description: Type is the Linode Instance Type which represents the
+                    cost, processor, memory, transfer, and storage profile of the
+                    Instance
+                  type: string
+              required:
+              - region
+              - type
+              type: object
             providerRef:
               description: ProviderReference specifies the provider that will be used
                 to create, observe, update, and delete this managed resource.
@@ -168,7 +192,7 @@ spec:
                     in the future.'
                   type: string
                 kind:
-                  description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
+                  description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
                   type: string
                 name:
                   description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
@@ -178,53 +202,91 @@ spec:
                   type: string
                 resourceVersion:
                   description: 'Specific resourceVersion to which this reference is
-                    made, if any. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#concurrency-control-and-consistency'
+                    made, if any. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency'
                   type: string
                 uid:
                   description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                   type: string
               type: object
             reclaimPolicy:
-              description: ReclaimPolicy specifies what will happen to the external
-                resource this managed resource manages when the managed resource is
-                deleted. "Delete" deletes the external resource, while "Retain" (the
-                default) does not. Note this behaviour is subtly different from other
-                uses of the ReclaimPolicy concept within the Kubernetes ecosystem
-                per https://github.com/crossplaneio/crossplane-runtime/issues/21
-              type: string
-            region:
-              description: Region defines the geographic location of a Linode Instance
-              type: string
-            status:
-              description: Status is the current activity status of a Linode Instance
+              description: ReclaimPolicy specifies what will happen to this managed
+                resource when its resource claim is deleted, and what will happen
+                to the underlying external resource when the managed resource is deleted.
+                The "Delete" policy causes the managed resource to be deleted when
+                its bound resource claim is deleted, and in turn causes the external
+                resource to be deleted when its managed resource is deleted. The "Retain"
+                policy causes the managed resource to be retained, in binding phase
+                "Released", when its resource claim is deleted, and in turn causes
+                the external resource to be retained when its managed resource is
+                deleted. The "Retain" policy is used when no policy is specified.
               enum:
-              - offline
-              - running
-              type: string
-            type:
-              description: Type is the Linode Instance Type which represents the cost,
-                processor, memory, transfer, and storage profile of the Instance
+              - Retain
+              - Delete
               type: string
             writeConnectionSecretToRef:
-              description: WriteConnectionSecretToReference specifies the name of
-                a Secret, in the same namespace as this managed resource, to which
-                any connection details for this managed resource should be written.
-                Connection details frequently include the endpoint, username, and
-                password required to connect to the managed resource.
+              description: WriteConnectionSecretToReference specifies the namespace
+                and name of a Secret to which any connection details for this managed
+                resource should be written. Connection details frequently include
+                the endpoint, username, and password required to connect to the managed
+                resource.
               properties:
                 name:
-                  description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                    TODO: Add other useful fields. apiVersion, kind, uid?'
+                  description: Name of the secret.
                   type: string
+                namespace:
+                  description: Namespace of the secret.
+                  type: string
+              required:
+              - name
+              - namespace
               type: object
           required:
+          - forProvider
           - providerRef
-          - region
-          - type
           type: object
         status:
-          description: InstanceStatus defines the observed state of Instance
+          description: InstanceStatus
           properties:
+            atProvider:
+              description: InstanceObservation defines the observed state of Instance
+              properties:
+                id:
+                  description: Id is the unique immutable numeric identifier of a
+                    Linode Instance
+                  type: integer
+                image:
+                  description: Image is the image detected on a Linode Instance disk
+                  type: string
+                ipv4:
+                  description: IPv4 is the list of IPv4 addresses associated with
+                    a Linode Instance
+                  items:
+                    type: string
+                  type: array
+                ipv6:
+                  description: IPv6 is the public IPv6 address of a Linode Instance
+                  type: string
+                label:
+                  description: Label is the unique mutable name of a Linode Instance
+                  type: string
+                region:
+                  description: Region defines the geographic location of a Linode
+                    Instance
+                  type: string
+                status:
+                  description: Status is the current activity status of a Linode Instance
+                  type: string
+                type:
+                  description: Type is the Linode Instance Type which represents the
+                    cost, processor, memory, transfer, and storage profile of the
+                    Instance
+                  type: string
+              required:
+              - label
+              - region
+              - status
+              - type
+              type: object
             bindingPhase:
               description: Phase represents the binding phase of a managed resource
                 or claim. Unbindable resources cannot be bound, typically because
@@ -235,11 +297,12 @@ spec:
               - Unbindable
               - Unbound
               - Bound
+              - Released
               type: string
             conditions:
               description: Conditions of the resource.
               items:
-                description: A Condition that may apply to a managed resource.
+                description: A Condition that may apply to a resource.
                 properties:
                   lastTransitionTime:
                     description: LastTransitionTime is the last time this condition
@@ -269,40 +332,8 @@ spec:
                 - type
                 type: object
               type: array
-            id:
-              description: Id is the unique immutable numeric identifier of a Linode
-                Instance
-              type: integer
-            image:
-              description: Image is the image detected on a Linode Instance disk
-              type: string
-            ipv4:
-              description: IPv4 is the list of IPv4 addresses associated with a Linode
-                Instance
-              items:
-                type: string
-              type: array
-            ipv6:
-              description: IPv6 is the public IPv6 address of a Linode Instance
-              type: string
-            label:
-              description: Label is the unique mutable name of a Linode Instance
-              type: string
-            region:
-              description: Region defines the geographic location of a Linode Instance
-              type: string
-            status:
-              description: Status is the current activity status of a Linode Instance
-              type: string
-            type:
-              description: Type is the Linode Instance Type which represents the cost,
-                processor, memory, transfer, and storage profile of the Instance
-              type: string
           required:
-          - label
-          - region
-          - status
-          - type
+          - atProvider
           type: object
       type: object
   version: v1alpha1
