--- a/config/crd/bases/linode.stack.crossplane.io_lkes.yaml
+++ b/config/crd/bases/linode.stack.crossplane.io_lkes.yaml
@@ -6,44 +6,20 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.2.4
   creationTimestamp: null
-  name: instances.linode.stack.crossplane.io
+  name: lkes.linode.stack.crossplane.io
 spec:
-  additionalPrinterColumns:
-  - JSONPath: .metadata.creationTimestamp
-    name: AGE
-    type: date
-  - JSONPath: .status.label
-    description: Unique label associated with this Linode Instance
-    name: LABEL
-    priority: 1
-    type: string
-  - JSONPath: .status.region
-    description: Region where this Linode Instance is deployed
-    name: REGION
-    priority: 1
-    type: string
-  - JSONPath: .status.ipv4[0]
-    description: First IPv4 address of this Linode Instance
-    name: IPV4
-    priority: 1
-    type: string
-  - JSONPath: .status.status
-    description: Power status of this Linode Instance
-    name: STATUS
-    priority: 1
-    type: string
   group: linode.stack.crossplane.io
   names:
-    kind: Instance
-    listKind: InstanceList
-    plural: instances
-    singular: instance
+    kind: Lke
+    listKind: LkeList
+    plural: lkes
+    singular: lke
   scope: Namespaced
   subresources:
     status: {}
   validation:
     openAPIV3Schema:
-      description: Instance is the Schema for the instances API
+      description: Lke is the Schema for the lkes API
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
@@ -58,14 +34,8 @@ spec:
         metadata:
           type: object
         spec:
-          description: InstanceSpec defines the desired state of Instance
+          description: LkeSpec defines the desired state of LKE
           properties:
-            authorizedUsers:
-              description: AuthorizedUsers are Linode user accounts whose SSH keys
-                will be authorized to SSH into the instance
-              items:
-                type: string
-              type: array
             claimRef:
               description: ClaimReference specifies the resource claim to which this
                 managed resource will be bound. ClaimReference is set automatically
@@ -106,10 +76,9 @@ spec:
                   type: string
               type: object
             classRef:
-              description: NonPortableClassReference specifies the non-portable resource
-                class that was used to dynamically provision this managed resource,
-                if any. Crossplane does not currently support setting this field manually,
-                per https://github.com/crossplaneio/crossplane-runtime/issues/20
+              description: ClassReference specifies the resource class that was used
+                to dynamically provision this managed resource, if any. Crossplane
+                does not currently support setting this field manually, per https://github.com/crossplaneio/crossplane-runtime/issues/20
               properties:
                 apiVersion:
                   description: API version of the referent.
@@ -144,13 +113,50 @@ spec:
                   description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
                   type: string
               type: object
-            image:
-              description: Image is the disk image to be applied to the first instance
-                disk
-              type: string
-            label:
-              description: Label is the unique name of this Linode Instance
-              type: string
+            forProvider:
+              description: LkeParameters defines the desired state of Lke
+              properties:
+                label:
+                  type: string
+                node_pools:
+                  items:
+                    description: LkeClusterPool
+                    properties:
+                      count:
+                        type: integer
+                      id:
+                        type: integer
+                      linodes:
+                        items:
+                          description: LkeClusterPoolLinode
+                          properties:
+                            id:
+                              type: integer
+                            status:
+                              type: string
+                          required:
+                          - id
+                          - status
+                          type: object
+                        type: array
+                      type:
+                        type: string
+                    type: object
+                  type: array
+                region:
+                  type: string
+                tags:
+                  items:
+                    type: string
+                  type: array
+                version:
+                  type: string
+              required:
+              - label
+              - node_pools
+              - region
+              - version
+              type: object
             providerRef:
               description: ProviderReference specifies the provider that will be used
                 to create, observe, update, and delete this managed resource.
@@ -189,46 +195,104 @@ spec:
                   type: string
               type: object
             reclaimPolicy:
-              description: ReclaimPolicy specifies what will happen to the external
-                resource this managed resource manages when the managed resource is
-                deleted. "Delete" deletes the external resource, while "Retain" (the
-                default) does not. Note this behaviour is subtly different from other
-                uses of the ReclaimPolicy concept within the Kubernetes ecosystem
-                per https://github.com/crossplaneio/crossplane-runtime/issues/21
-              type: string
-            region:
-              description: Region defines the geographic location of a Linode Instance
-              type: string
-            status:
-              description: Status is the current activity status of a Linode Instance
+              description: ReclaimPolicy specifies what will happen to this managed
+                resource when its resource claim is deleted, and what will happen
+                to the underlying external resource when the managed resource is deleted.
+                The "Delete" policy causes the managed resource to be deleted when
+                its bound resource claim is deleted, and in turn causes the external
+                resource to be deleted when its managed resource is deleted. The "Retain"
+                policy causes the managed resource to be retained, in binding phase
+                "Released", when its resource claim is deleted, and in turn causes
+                the external resource to be retained when its managed resource is
+                deleted. The "Retain" policy is used when no policy is specified.
               enum:
-              - offline
-              - running
-              type: string
-            type:
-              description: Type is the Linode Instance Type which represents the cost,
-                processor, memory, transfer, and storage profile of the Instance
+              - Retain
+              - Delete
               type: string
             writeConnectionSecretToRef:
-              description: WriteConnectionSecretToReference specifies the name of
-                a Secret, in the same namespace as this managed resource, to which
-                any connection details for this managed resource should be written.
-                Connection details frequently include the endpoint, username, and
-                password required to connect to the managed resource.
+              description: WriteConnectionSecretToReference specifies the namespace
+                and name of a Secret to which any connection details for this managed
+                resource should be written. Connection details frequently include
+                the endpoint, username, and password required to connect to the managed
+                resource.
               properties:
                 name:
-                  description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                    TODO: Add other useful fields. apiVersion, kind, uid?'
+                  description: Name of the secret.
                   type: string
+                namespace:
+                  description: Namespace of the secret.
+                  type: string
+              required:
+              - name
+              - namespace
               type: object
           required:
+          - forProvider
           - providerRef
-          - region
-          - type
           type: object
         status:
-          description: InstanceStatus defines the observed state of Instance
+          description: LkeStatus defines the observed state of Lke
           properties:
+            atProvider:
+              description: LkeObservation defines the observed state of Lke
+              properties:
+                created:
+                  type: string
+                id:
+                  description: 'INSERT ADDITIONAL STATUS FIELD - define observed state
+                    of cluster Important: Run "make" to regenerate code after modifying
+                    this file'
+                  type: integer
+                label:
+                  type: string
+                node_pools:
+                  items:
+                    description: LkeClusterPool
+                    properties:
+                      count:
+                        type: integer
+                      id:
+                        type: integer
+                      linodes:
+                        items:
+                          description: LkeClusterPoolLinode
+                          properties:
+                            id:
+                              type: integer
+                            status:
+                              type: string
+                          required:
+                          - id
+                          - status
+                          type: object
+                        type: array
+                      type:
+                        type: string
+                    type: object
+                  type: array
+                region:
+                  type: string
+                status:
+                  type: string
+                tags:
+                  items:
+                    type: string
+                  type: array
+                updated:
+                  type: string
+                version:
+                  type: string
+              required:
+              - created
+              - id
+              - label
+              - node_pools
+              - region
+              - status
+              - tags
+              - updated
+              - version
+              type: object
             bindingPhase:
               description: Phase represents the binding phase of a managed resource
                 or claim. Unbindable resources cannot be bound, typically because
@@ -239,11 +303,12 @@ spec:
               - Unbindable
               - Unbound
               - Bound
+              - Released
               type: string
             conditions:
               description: Conditions of the resource.
               items:
-                description: A Condition that may apply to a managed resource.
+                description: A Condition that may apply to a resource.
                 properties:
                   lastTransitionTime:
                     description: LastTransitionTime is the last time this condition
@@ -273,40 +338,8 @@ spec:
                 - type
                 type: object
               type: array
-            id:
-              description: Id is the unique immutable numeric identifier of a Linode
-                Instance
-              type: integer
-            image:
-              description: Image is the image detected on a Linode Instance disk
-              type: string
-            ipv4:
-              description: IPv4 is the list of IPv4 addresses associated with a Linode
-                Instance
-              items:
-                type: string
-              type: array
-            ipv6:
-              description: IPv6 is the public IPv6 address of a Linode Instance
-              type: string
-            label:
-              description: Label is the unique mutable name of a Linode Instance
-              type: string
-            region:
-              description: Region defines the geographic location of a Linode Instance
-              type: string
-            status:
-              description: Status is the current activity status of a Linode Instance
-              type: string
-            type:
-              description: Type is the Linode Instance Type which represents the cost,
-                processor, memory, transfer, and storage profile of the Instance
-              type: string
           required:
-          - label
-          - region
-          - status
-          - type
+          - atProvider
           type: object
       type: object
   version: v1alpha1
