--- a/config/crd/bases/linode.stack.crossplane.io_providers.yaml
+++ b/config/crd/bases/linode.stack.crossplane.io_providers.yaml
@@ -3,14 +3,18 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
+  annotations:
+    controller-gen.kubebuilder.io/version: v0.2.4
   creationTimestamp: null
   name: providers.linode.stack.crossplane.io
 spec:
   group: linode.stack.crossplane.io
   names:
     kind: Provider
+    listKind: ProviderList
     plural: providers
-  scope: ""
+    singular: provider
+  scope: Namespaced
   validation:
     openAPIV3Schema:
       description: Provider is the Schema for the providers API
@@ -18,12 +22,12 @@ spec:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
             of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
           type: string
         kind:
           description: 'Kind is a string value representing the REST resource this
             object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
           type: string
         metadata:
           type: object
@@ -43,7 +47,7 @@ spec:
                     TODO: Add other useful fields. apiVersion, kind, uid?'
                   type: string
                 optional:
-                  description: Specify whether the Secret or it's key must be defined
+                  description: Specify whether the Secret or its key must be defined
                   type: boolean
               required:
               - key
